# open-notebook

./: railway.json  railway.toml
caddy/: Caddyfile  (+2 more)
open-notebook/: .dockerignore  .env.example  .worktreeinclude  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  Dockerfile.single  MAINTAINER_GUIDE.md  MIGRATION.md  Makefile  batch_fix_services.py  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.single.yml  mypy.ini  pyproject.toml  run_api.py  supervisord.conf  supervisord.single.conf
open-notebook/.github/: pull_request_template.md
open-notebook/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  installation_issue.yml
open-notebook/.github/workflows/: build-and-release.yml  build-dev.yml
open-notebook/api/: auth.py  chat_service.py  client.py  command_service.py  context_service.py  embedding_service.py  episode_profiles_service.py  insights_service.py  main.py  models.py  models_service.py  notebook_service.py  notes_service.py  podcast_api_service.py  podcast_service.py  search_service.py  settings_service.py  sources_service.py  transformations_service.py
open-notebook/api/routers/: auth.py  chat.py  commands.py  config.py  context.py  embedding.py  embedding_rebuild.py  episode_profiles.py  insights.py  models.py  notebooks.py  notes.py  podcasts.py  search.py  settings.py  source_chat.py  sources.py  speaker_profiles.py  transformations.py
open-notebook/commands/: __init__.py  embedding_commands.py  example_commands.py  podcast_commands.py  source_commands.py
open-notebook/docs/: index.md
open-notebook/docs/deployment/: development.md  docker.md  index.md  retry-configuration.md  reverse-proxy.md  security.md  single-container.md
open-notebook/docs/development/: api-reference.md  architecture.md  contributing.md  index.md
open-notebook/docs/features/: ai-models.md  citations.md  context-management.md  index.md  local_tts.md  openai-compatible.md  podcasts.md  transformations.md
open-notebook/docs/getting-started/: 5-minute-setup.md  first-notebook.md  index.md  installation.md  introduction.md  quick-start.md
open-notebook/docs/migration/: streamlit-to-nextjs.md
open-notebook/frontend/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
open-notebook/open_notebook/: config.py  exceptions.py
open-notebook/scripts/: README.md  export_docs.py  wait-for-api.sh
open-notebook/setup_guide/: DOCKER_SETUP_ADVANCED.md  README.md  docker-compose.yml
open-notebook/tests/: conftest.py  test_domain.py  test_graphs.py  test_models_api.py
(+171 files in other folders)
